--- a/package.json
+++ b/package.json
@@ -9,14 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chatscope/chat-ui-kit-react": "^1.9.3",
+    "@chatscope/chat-ui-kit-styles": "^1.2.3",
     "antd": "^4.21.3",
     "antd-img-crop": "^4.2.3",
     "axios": "^0.27.2",
     "gsap": "^3.10.4",
+    "js-cookie": "^3.0.1",
+    "moment": "^2.29.3",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "socket.io-client": "^4.5.1"
+    "react-icons": "^4.4.0",
+    "react-intersection-observer": "^9.3.4",
+    "react-loading-skeleton": "^3.1.0",
+    "sass": "^1.53.0",
+    "socket.io-client": "^4.5.1",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
